Changing the layout for pages

--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Personal Website - Mukul Taneja
+
+title: Home - Mukul Taneja
 email: mukultaneja91@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Personal Web Page belongs to Mukul Taneja.
-  Mukul Taneja is the only person who owns this page and
-  this page contains information such as his primary interest,
-  his background, his skills and his contact details across internet.
-baseurl: "" # the subpath of your site, e.g. /blog
+description: Home page for Mukul Taneja (@mukultaneja)
+baseurl: ""
 url: "https://mukultaneja.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 author: Mukul Taneja
 twitter_username: thecuriousmukul
@@ -31,13 +28,14 @@ social:
     - https://twitter.com/thecuriousmukul
     - https://github.com/mukultaneja
     - https://www.linkedin.com/in/mukultaneja
-    - https://www.facebook.com/Mac.theCreator
 
 # Build settings
 markdown: kramdown
+remote_theme: pages-themes/slate@v0.2.0
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
   - jekyll-seo-tag
 
 # Exclude from processing.
